corrected handler and invoker to not recreate the chain that was breaking memory

--- a/README.adoc
+++ b/README.adoc
@@ -30,7 +30,7 @@ ollama download mistral
 
 [source,sh]
 ----
-python3.11 -m venv venv         # The .gitignore prevents your venv from being committed
+python3.11 -m venv venv
 source venv/bin/activate
 ----
 
